# canvas

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  routes.rs  types.rs  utils.rs  websocket.rs
backend/src/routes/: images.rs  lessons.rs  museum.rs  tts.rs
client/: index.html  package.json  tsconfig.app.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: composer.tsx  preview.tsx
client/src/components/canvas/: area.tsx  board.tsx  info.tsx
client/src/components/ui/: button.tsx  markdown.tsx  prompt-input.tsx  prompt-suggestion.tsx  tooltip.tsx
client/src/lib/: fetcher.ts  suggestions.tsx
client/src/views/: canvas.tsx  home.tsx
