[package]
name = "canvas-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
socketioxide = "0.16.2"
axum-extra = "0.10.1"
serde = "1.0.188"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
haversine = "0.2.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"
base64 = "0.22.1"
rmpv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
strum = "0.27.1"
strum_macros = "0.27.1"
chrono = "0.4.38"
openssl = { version = "0.10.68", features = ["vendored"] }
tower-http = { version = "0.6.1", features = ['normalize-path'] }
tower = "0.5.1"
openrouter = "0.1.0"
openrouter_api = "0.1.4"
anyhow = "1.0.98"

[dependencies.mongodb]
version = "3.2.3"
